# adk-agentic-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  README_LOCAL.md  README_MULTI_AGENT.md  README_OPTIMIZED_WORKFLOW.md  __main__.py  adk_config.py  chinese_law.txt  clean_index.py  download_models.py  init_index.py  main.py  pyproject.toml  requirements.txt  test_agent_retrieval.py  test_chat.py  test_conditional_workflow.py  test_multi_search.py  test_optimized_workflow.py  test_parse_quality.py  test_sequential_workflow.py  test_serpapi.py  test_simple.py  test_workflow_agent.py
agentic_rag/: __init__.py  agent.py  answer_generator.py  config.py  local_retriever.py  optimized_workflow_agent.py  prompts.py  quality_evaluator.py  query_rewriter.py  retriever.py  sub_agents.py  sub_agents_adk.py  web_search.py  web_search_agent.py  workflow_agent.py
tests/: test_local_system.py
